--- a/src/components/Speakers/Speakers.scss
+++ b/src/components/Speakers/Speakers.scss
@@ -30,7 +30,7 @@
     justify-content: center;
     margin-top: 32px;
     margin-bottom: 102px;
-    z-index: 12;
+    z-index: 2;
   }
 
   &__background-container {
@@ -91,6 +91,7 @@
 
     &__signup-button {
       margin-top: 8px;
+      margin-bottom: 52px;
     }
   }
 }
